Corrigindo url do build para deploy no firebase

--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
   "bugs": {
     "url": "https://github.com/tmcamillo/burger-queen/issues"
   },
-  "homepage": "https://github.com/tmcamillo/burger-queen#readme"
+  "homepage": "https://burguerqueen-f0b7c.firebaseapp.com"
 }
